--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/tasklist?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username = bestuser
 spring.datasource.password = bestuser
+
+
+#Default color in Priority Controller
+priorityDefaultColor=#808080
