--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password = bestuser
 
 #Default color in Priority Controller
 priorityDefaultColor=#808080
+
+#Default id in StatController
+defaultId=1
