--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,11 @@ spring.datasource.url = jdbc:mysql://localhost:3306/tasklist?useSSL=false&useUni
 spring.datasource.username = bestuser
 spring.datasource.password = bestuser
 
+#to show SQL requests
+#в production лучше отключать
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 
 #Default color in Priority Controller
 priorityDefaultColor=#808080
